# VoiceLink

./: .gitignore  DEEP_DIVE.md  README.md  TASKS.md
.github/workflows/: release.yml
gui/: README.md  index.html  package-lock.json
gui/src/: main.ts  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/nsis/: hooks.nsh
gui/src-tauri/src/: lib.rs  main.rs
research/: 01_explore_sapi.ps1
sapi_bridge/: CMakeLists.txt
sapi_bridge/src/: class_factory.cpp  class_factory.h  debug.h  dllmain.cpp  guids.h  http_client.cpp  http_client.h  tts_engine.cpp  tts_engine.h  voicelink.def
server/models/: qwen3_model.py
server/routers/: tts.py
